feat: improve authentication configuration and social login handling  (#211)
## Summary

This PR improves the authentication system by fixing environment
variable handling for disabling auth features
and enhancing the social login provider configuration. The changes
ensure that `DISABLE_EMAIL_SIGN_IN` and
`DISABLE_SIGN_UP` environment variables work correctly and provide
better error handling for missing OAuth
  credentials.
  
The discussion of this feature is here -
https://github.com/cgoinglove/better-chatbot/discussions/210

  ## Changes Made

  ### 🔧 Environment Variable Changes
- Fixed `DISABLE_SIGN_UP` environment variables to properly disable
features
- Updated auth config logic to correctly handle disable flags (inverted
boolean logic)
- Updated comprehensive test suite to validate new environment variable
behavior
  - Implemented Microsoft Social Login

  ### 🎨 UI Improvements
  - Added Microsoft social login icon component
  - Improved social login button layout and styling
  - Enhanced error handling for missing OAuth credentials

  ### 📚 Documentation
  - Updated OAuth documentation with clearer setup instructions
  - Fixed environment variable examples in `.env.example`

  ## Before/After Screenshots

  ### Before - Main Branch

![main-branch-login-page](https://github.com/user-attachments/assets/39d4c80b-609c-4c96-a7f1-6ee4fe7f0c7d)

### Before - OAuth Warnings
<img width="1187" height="782" alt="Screenshot 2025-08-02 at 2 53 23 PM"
src="https://github.com/user-attachments/assets/50e159f0-5028-46f8-9aa8-f90ca4ac5fa7"
/>



  ### After - Feature Branch

  #### Just Microsoft Provider Enabled

![feature-branch-login-page](https://github.com/user-attachments/assets/1e2e1582-c11d-478b-8890-b6f1c467a7a4)


  #### All Providers Enabled
<img width="1197" height="803" alt="Screenshot 2025-08-02 at 2 56 54 PM"
src="https://github.com/user-attachments/assets/9b960f0f-21fb-4b48-a261-fe9af0d63326"
/>


  #### Email and Signup Disabled
<img width="1200" height="80

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,8 @@ BETTER_AUTH_SECRET=****
 
 # (Optional)
 # URL for Better Auth (the URL you access the app from)
+# IMPORTANT: Set this to https://localhost:3000 if using HTTPS locally
+# For production, this should match your domain (e.g., https://yourdomain.com)
 BETTER_AUTH_URL=
 
 # === Database ===
@@ -30,11 +32,30 @@ FILE_BASED_MCP_CONFIG=false
 
 # (Optional) 
 # === OAuth Settings ===
-# Fill in these values only if you want to enable Google/GitHub login
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+# Fill in these values only if you want to enable Google/GitHub/Microsoft login
+
+#GitHub
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
+
+#Google
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+# Set to 1 to force account selection
+GOOGLE_FORCE_ACCOUNT_SELECTION=
+
+
+# Microsoft
+MICROSOFT_CLIENT_ID=
+MICROSOFT_CLIENT_SECRET=
+# Optional Tenant Id
+MICROSOFT_TENANT_ID=
+# Set to 1 to force account selection
+MICROSOFT_FORCE_ACCOUNT_SELECTION=
+
+
+# Set this to 1 to disable email sign in
+DISABLE_EMAIL_SIGN_IN=
 
 # Set this to 1 to disable user sign-ups.
 DISABLE_SIGN_UP=
