fix: #111  prevent MCP server disconnection during long-running tool calls (#238)

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,10 @@ OPENROUTER_API_KEY=****
 OLLAMA_BASE_URL=http://localhost:11434/api
 
 
+# === Database ===
+# If you don't have PostgreSQL running locally, start it with: pnpm docker:pg
+POSTGRES_URL=postgres://your_username:your_password@localhost:5432/your_database_name
+
 # Secret for Better Auth (generate with: npx @better-auth/cli@latest secret)
 BETTER_AUTH_SECRET=****
 
@@ -17,22 +21,24 @@ BETTER_AUTH_SECRET=****
 # For production, this should match your domain (e.g., https://yourdomain.com)
 BETTER_AUTH_URL=
 
-# === Database ===
-# If you don't have PostgreSQL running locally, start it with: pnpm docker:pg
-POSTGRES_URL=postgres://your_username:your_password@localhost:5432/your_database_name
-
 # (Optional)
+# === Tools === 
+# Exa AI for web search and content extraction (optional, but recommended for @web and research features)
+EXA_API_KEY=
+
+
+
+# ========================================================================
+# === OPTIONAL SETTINGS BELOW (not required for basic functionality) ===
+# ========================================================================
+
+
+# (Optional) Redis for Multi-Instance Support
 # When running multiple server instances (load balancing, clustering):
 # - With Redis: Real-time MCP synchronization + reduced polling
 # - Without Redis: Polling-only synchronization (single instance or dev mode)
 # redis://localhost:6379
 REDIS_URL=
-
-
-# (Optional)
-# === Tools === 
-# Exa AI for web search and content extraction (optional, but recommended for @web and research features)
-EXA_API_KEY=
 
 
 # (Optional)
@@ -73,3 +79,8 @@ DISABLE_SIGN_UP=
 # (Optional)
 # Set this to 1 to disallow adding MCP servers.
 NOT_ALLOW_ADD_MCP_SERVERS=
+
+# (Optional)
+# Maximum timeout for MCP tool calls in milliseconds (default: no timeout)
+# Useful for long-running MCP tools. Example: 600000 (10 minutes)
+MCP_MAX_TOTAL_TIMEOUT=
