--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,10 @@ ANTHROPIC_API_KEY=****
 OPENROUTER_API_KEY=****
 OLLAMA_BASE_URL=http://localhost:11434/api
 
+# (Optional) Default model to use when none is specified
+# Format: provider/model (e.g., openRouter/qwen3-8b:free)
+E2E_DEFAULT_MODEL=
+
 
 # === Database ===
 # If you don't have PostgreSQL running locally, start it with: pnpm docker:pg
