--- a/package.json
+++ b/package.json
@@ -117,7 +117,8 @@
     "tw-animate-css": "^1.3.6",
     "vaul": "^1.1.2",
     "zod": "^3.25.76",
-    "zustand": "^5.0.7"
+    "zustand": "^5.0.7",
+    "resend": "^4.0.0"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
@@ -142,7 +143,10 @@
     "vitest": "^3.2.4"
   },
   "lint-staged": {
-    "*.{js,json,mjs,ts,yaml,tsx,css}": ["pnpm format", "pnpm lint:fix"]
+    "*.{js,json,mjs,ts,yaml,tsx,css}": [
+      "pnpm format",
+      "pnpm lint:fix"
+    ]
   },
   "packageManager": "pnpm@10.2.1",
   "engines": {
