--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "db:migrate": "tsx scripts/db-migrate.ts",
     "db:pull": "drizzle-kit pull",
     "db:check": "drizzle-kit check",
+    "db:apply-role": "tsx scripts/apply-role-migration.ts",
     "docker-compose:up": "docker-compose -f docker/compose.yml up -d --build",
     "docker-compose:down": "docker-compose -f docker/compose.yml down",
     "docker-compose:logs": "docker-compose -f docker/compose.yml logs -f",
@@ -69,7 +70,6 @@
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toggle": "^1.1.9",
-    "@radix-ui/react-tooltip": "^1.2.7",
     "@tiptap/extension-mention": "^2.26.1",
     "@tiptap/react": "^2.26.1",
     "@tiptap/starter-kit": "^2.26.1",
