--- a/package.json
+++ b/package.json
@@ -122,7 +122,7 @@
     "resend": "^4.0.0",
     "@mondaydotcomorg/monday-api-mcp": "latest",
     "@vercel/blob": "^0.27.0",
-    "pdf-parse": "^1.1.1"
+    "pdfjs-dist": "^4.4.379"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
