Revert "Testing new big PDF extraction"
This reverts commit 80c92dcc7805b175b3f78c7f6c446ce96360991a.

--- a/package.json
+++ b/package.json
@@ -120,9 +120,7 @@
     "zod": "^3.25.76",
     "zustand": "^5.0.7",
     "resend": "^4.0.0",
-    "@mondaydotcomorg/monday-api-mcp": "latest",
-    "@vercel/blob": "^0.27.0",
-    "pdfjs-dist": "^4.4.379"
+    "@mondaydotcomorg/monday-api-mcp": "latest"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
