--- a/package.json
+++ b/package.json
@@ -120,7 +120,8 @@
     "zod": "^3.25.76",
     "zustand": "^5.0.7",
     "resend": "^4.0.0",
-    "@mondaydotcomorg/monday-api-mcp": "latest"
+    "@mondaydotcomorg/monday-api-mcp": "latest",
+    "pdfjs-dist": "^4.8.69"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
