--- a/package.json
+++ b/package.json
@@ -120,8 +120,7 @@
     "zod": "^3.25.76",
     "zustand": "^5.0.7",
     "resend": "^4.0.0",
-    "@mondaydotcomorg/monday-api-mcp": "latest",
-    "pdfjs-dist": "^4.8.69"
+    "@mondaydotcomorg/monday-api-mcp": "latest"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
